<resources>
    <string name="app_name">KwartaPH</string>
    <string name="don_t_have_an_account_yet_sign_up">Don\'t have an account yet? Sign up</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="post_an_item">Post An Item</string>
    <string name="history">History</string>
    <string name="notifications">Notifications</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="favorites">Favorites</string>
    <string name="bid_history">Bid History</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
