<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_homebidder"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="Home" />

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="Home" />

        <item
            android:id="@+id/nav_postanitem"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/post_an_item" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_history_black_24dp"
            android:title="@string/history" />

        <item
            android:id="@+id/nav_bidhistory"
            android:icon="@drawable/ic_history_black_24dp"
            android:title="@string/bid_history" />
        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/ic_favorite_border_black_24dp"
            android:title="@string/favorites" />

        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/ic_mail_outline_black_24dp"
            android:title="@string/notifications" />
    </group>

    <item
        android:title="Utilities">
        <menu>
            <item
                android:visible="false"
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings_black_24dp"
                android:title="@string/settings" />
            <item
                android:visible="false"
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_exit_to_app_black_24dp"
                android:title="@string/logout" />
        </menu>
    </item>

</menu>
